tests/expected_invalid_generic_proof_decl.diag.out
<input>:2:21: error: proof declarations may not be generic
    public proof Receipt<T> {
                        ^
